@@ -239,13 +239,19 @@ Return the modified alist."
              ,@body)
          (goto-char ,old-pnt)))))
 
-(defun nh-gamegrid-set-cell (x y c)
-  ;; Like `gamegrid-set-cell', but without the `gamegrid-set-face'.
+(defun nh-gamegrid-set-cell (x y ch &optional oldch)
+  "`gamegrid-set-cell', but handles different glyph.
+
+This function will act like `gamegrid-set-cell', but the CH and OLDCH do not have
+to match up.  This means that we can still assign glyphs from a set of 256 while
+the visual representation may be from Unicode.  This is needed for DEC and IBM
+graphic styles."
   (save-excursion
     (let ((buffer-read-only nil))
       (goto-char (gamegrid-cell-offset x y))
       (delete-char 1)
-      (insert-char c 1))))
+      (insert-char ch 1)
+      (gamegrid-set-face (if oldch oldch ch)))))
 
 
 (provide 'nethack-compat)
